--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,33 @@
 */
 /*Global less variebles*/
 /*----------------------------------------
+	TYPOGRAPHY
+----------------------------------------*/
+h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #474747;
+}
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #474747;
+  line-height: 1.5em;
+}
+a {
+  color: #0099e6;
+}
+.btn {
+  border: 1px solid #c7d7e5;
+  border-radius: 0;
+  padding: 14px 30px;
+  margin: 15px 0;
+}
+.btn.btn-primary {
+  background: #0099e6;
+}
+/*----------------------------------------
 	BODY, MAIN
 ----------------------------------------*/
 body {
@@ -21,6 +48,8 @@ header {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 999;
 }
 header .logo {
   padding: 32px 15px;
@@ -141,6 +170,54 @@ header .soc-media ul li.linkedin a {
   background-position: -52px 0;
 }
 /*----------------------------------------
+	MAIN-SLIDER
+----------------------------------------*/
+.main-slider-wrapper .main-slider .slide {
+  outline: none;
+  padding: 120px 0;
+  position: relative;
+}
+.main-slider-wrapper .main-slider .slide .slider-image {
+  display: none;
+}
+.main-slider-wrapper .main-slider .slide .desc {
+  padding: 10px 30px;
+  background: rgba(255, 255, 255, 0.95);
+}
+.main-slider-wrapper .main-slider .slick-arrow {
+  border: none;
+  text-indent: 999px;
+  overflow: hidden;
+  width: 70px;
+  height: 70px;
+  background: url(../images/main-slider-controls.png) no-repeat;
+  outline: none;
+  position: absolute;
+  z-index: 999;
+  top: 50%;
+  margin-top: -35px;
+  opacity: 0;
+  -o-transition: opacity 0.3s ease;
+  -ms-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+}
+.main-slider-wrapper .main-slider .slick-prev {
+  left: 5%;
+  background-position: 0 0;
+}
+.main-slider-wrapper .main-slider .slick-next {
+  right: 5%;
+  background-position: -70px 0;
+}
+.main-slider-wrapper .main-slider:hover .slick-arrow {
+  opacity: 0.7;
+  -o-transition: opacity 0.3s ease;
+  -ms-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+}
+/*----------------------------------------
 	1200 width
 ----------------------------------------*/
 @media screen and (max-width: 1200px) {
@@ -214,6 +291,12 @@ header .soc-media ul li.linkedin a {
   }
   header .soc-media {
     display: none;
+  }
+  .main-slider-wrapper .main-slider .slide {
+    padding: 50px 0;
+  }
+  .main-slider-wrapper .main-slider .slick-arrow {
+    display: none !important;
   }
 }
 /*mixed functions*/
