--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,23 @@ p {
 a {
   color: #0099e6;
 }
+p.title {
+  font-size: 30px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  margin: 50px 0;
+}
+p.title span {
+  font-weight: 800;
+  color: #0099e6;
+  margin: 0 5px;
+}
+p.subtitle {
+  font-size: 21px;
+  font-weight: 300;
+  text-align: center;
+}
 .btn {
   border: 1px solid #c7d7e5;
   border-radius: 0;
@@ -216,6 +233,22 @@ header .soc-media ul li.linkedin a {
   -ms-transition: opacity 0.3s ease;
   -moz-transition: opacity 0.3s ease;
   -webkit-transition: opacity 0.3s ease;
+}
+/*----------------------------------------
+	WORK-PROCESS
+----------------------------------------*/
+.work-process .item {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.work-process .item .thumbnail {
+  margin-bottom: 0;
+  margin: 0 auto;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.work-process .item .title {
+  margin: 10px 0;
+  color: #0099e6;
 }
 /*----------------------------------------
 	1200 width
